fix: bubble align

--- a/scss/components/_bubble.scss
+++ b/scss/components/_bubble.scss
@@ -75,7 +75,6 @@
 		align-items: start;
 		justify-items: start;
 		justify-content: start;
-		justify-self: start;
 		grid-template-columns: max-content 1fr;
 
 		> .#{$prefix}bubble-text {
